fix position issue on mobile navbar

--- a/client/styles.css
+++ b/client/styles.css
@@ -159,7 +159,7 @@ body {
         width: 95%;
         border-radius: 40px;
         height: 100px;
-        position: absolute;
+        position: fixed;
         display: block;
         top: unset;
         right: 0;
